...
      }
    },
    "Create": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Delete": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Delete Note": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Done": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "More": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "New File": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Open Sample Vault": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Preview": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Rename": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Save": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Settings": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Text": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Timeline": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Rename Note": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "File Operation Failed": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Knowledge": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Knowledge Actions": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Open Daily Note": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "New Canvas": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Remove Bookmark": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Add Bookmark": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Outline": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Edit Properties": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Note Details": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Create Linked Note?": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Add Card": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "New Base": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Edit Base": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Add": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "OK": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Vault": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "Edit": {
      "localizations": {
        "zh-Hans": {
...
